[package]
name = "test_rust"
version = "0.1.0"
edition = "2021"


[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
ctrlc = "3.1"
chrono = "0.4.37"
lazy_static = "1.2.0"
resp = { git = "https://github.com/creativcoder/resp" }
rust_utils = { git = "https://github.com/wang-xuewen/rust_utils" }


[lib]
name = "test_rust"
path = "src/my_lib.rs"
